(GH-3) Adapted model for loss function bug

--- a/translue-poc/text-detection/Text Detection - Translue PoC.ipynb
+++ b/translue-poc/text-detection/Text Detection - Translue PoC.ipynb
@@ -156,7 +156,7 @@
     "    bn = BatchNormalization()(conv)\n",
     "    lr = LeakyReLU(alpha=0.1)(bn)\n",
     "    \n",
-    "    conv = Conv2D(5, (3,3), activation='relu', padding='same')(lr)\n",
+    "    conv = Conv2D(5, (3,3), activation='tanh', padding='same')(lr)\n",
     "    final = Reshape((grid_h, grid_w, classes, info))(conv)\n",
     "    \n",
     "    # This is the new, complete model\n",
@@ -664,22 +664,7 @@
     "# [!] CAUTION - This trains the model 30x on 4 random images\n",
     "# Uncomment below only if you have time and a powerful machine\n",
     "# Below approach is outdated now, but it shows the idea of what's happening\n",
-    "# hist = model.fit(X_train, Y_train, epochs= 1, batch_size = 4, callbacks=[checkpoint], validation_data=(X_val, Y_val))\n",
-    "\n",
-    "# Initialize the number of epochs and batch size\n",
-    "EPOCHS = 30\n",
-    "BS = 4\n",
-    "\n",
-    "# This is a bit hacky, but necessary:\n",
-    "# No augmentation is done here, this is on purpose\n",
-    "# Construct the training image generator for data pipelining\n",
-    "aug = ImageDataGenerator(rotation_range=0, zoom_range=0,\n",
-    "    width_shift_range=0, height_shift_range=0, shear_range=0,\n",
-    "    horizontal_flip=False, fill_mode=\"nearest\")\n",
-    "\n",
-    "# Train the network though generator pipeline\n",
-    "H = model.fit_generator(aug.flow(X_train, Y_train, batch_size=BS),\n",
-    "    validation_data=(X_val, Y_val), steps_per_epoch=BS, epochs=EPOCHS)"
+    "hist = model.fit(X_train, Y_train, epochs= 1, batch_size = 4, callbacks=[checkpoint], validation_data=(X_val, Y_val))"
    ]
   },
   {
