--- a/translue-poc/text-detection/Text Detection - Translue PoC.ipynb
+++ b/translue-poc/text-detection/Text Detection - Translue PoC.ipynb
@@ -642,7 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss=loss_func, optimizer=opt, metrics = ['accuracy'])"
+    "model.compile(loss='mean_squared_error', optimizer=opt, metrics = ['accuracy'])"
    ]
   },
   {
