(GH-3) Worked over original loss func, bug avoided

--- a/translue-poc/text-detection/Text Detection - Translue PoC.ipynb
+++ b/translue-poc/text-detection/Text Detection - Translue PoC.ipynb
@@ -127,7 +127,7 @@
     "    model_json = model.to_json()\n",
     "    with open(\"model/text_detect_model.json\", \"w\") as json_file:\n",
     "        json_file.write(model_json)\n",
-    " \n",
+    "\n",
     "# Load a previously trained model\n",
     "def load_model(strr):        \n",
     "    json_file = open(strr, 'r')\n",
@@ -156,7 +156,7 @@
     "    bn = BatchNormalization()(conv)\n",
     "    lr = LeakyReLU(alpha=0.1)(bn)\n",
     "    \n",
-    "    conv = Conv2D(5, (3,3), activation='tanh', padding='same')(lr)\n",
+    "    conv = Conv2D(5, (3,3), activation='relu', padding='same')(lr)\n",
     "    final = Reshape((grid_h, grid_w, classes, info))(conv)\n",
     "    \n",
     "    # This is the new, complete model\n",
@@ -200,6 +200,7 @@
     "    l_noob = 0.5\n",
     "    coords = y_true[:,:,:,:,0] * l_coords\n",
     "    noobs = (-1 * (y_true[:,:,:,:,0] - 1) * l_noob)\n",
+    "    \n",
     "    p_pred = y_pred[:,:,:,:,0]\n",
     "    p_true = y_true[:,:,:,:,0]\n",
     "    x_true = y_true[:,:,:,:,1]\n",
@@ -213,14 +214,17 @@
     "    \n",
     "    p_loss_absent = K.sum(K.square(p_pred - p_true) * noobs)\n",
     "    p_loss_present = K.sum(K.square(p_pred - p_true))\n",
+    "    p_loss = p_loss_absent + p_loss_present\n",
+    "    \n",
     "    x_loss = K.sum(K.square(x_pred - x_true) * coords)\n",
     "    yy_loss = K.sum(K.square(yy_pred - yy_true) * coords)\n",
     "    xy_loss = x_loss + yy_loss\n",
-    "    w_loss = K.sum(K.square(K.sqrt(w_pred) - K.sqrt(w_true)) * coords)\n",
-    "    h_loss = K.sum(K.square(K.sqrt(h_pred) - K.sqrt(h_true)) * coords)\n",
+    "    \n",
+    "    w_loss = K.sum(K.square(w_pred - w_true) * coords)\n",
+    "    h_loss = K.sum(K.square(h_pred - h_true) * coords)\n",
     "    wh_loss = w_loss + h_loss\n",
     "    \n",
-    "    loss = p_loss_absent + p_loss_present + xy_loss + wh_loss\n",
+    "    loss = p_loss + xy_loss + wh_loss\n",
     "    \n",
     "    return loss"
    ]
@@ -642,7 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss='mean_squared_error', optimizer=opt, metrics = ['accuracy'])"
+    "model.compile(loss=loss_func, optimizer=opt, metrics = ['accuracy'])"
    ]
   },
   {
